# HiRISE-DTM-FILL

./: .gitignore  Dockerfile  LICENSE  README.md  check_nodata.py  cli  dataset.sh  dataset_analytics.sh  deploy-sagemaker.sh  environment.yaml  environment.yml  fill.sh  fill_all.sh  hole_gen.sh  pyproject.toml  pytest.ini  sagemaker.env.yaml  train.sh
.github/workflows/: build-and-push-ecr.yml  coverage.yml
docs/: 0 - Justificativa e Trabalhos Correlatos.md  1 - Objetivo.md  2 - Metodoloagia.md  5 - Referências.md
docs/diagrams/: dataset_sequence.puml  fill_sequence.puml  train_sequence.puml
docs/paper/gap-filling/: gap-filling.tex
docs/paper/gap-filling/libs/template-latex/: sbc-template.blg
docs/paper/template-latex/: sbc-template.tex
docs/results/: README.md  costs.csv
marsfill/: __main__.py
marsfill/cli/: __init__.py  batch_validate.py  dataset.py  dataset_analytics.py  fill.py  hole_gen.py  model.py  train.py
marsfill/dataset/: build.py  hirise_indexer.py
marsfill/entrypoint/: make.py  train.py
marsfill/fill/: dtm_filler.py  filler_stats.py  hole_gen.py
marsfill/model/: combined_loss.py  eval.py  hirise_dataset.py  train.py
marsfill/profiles/: local.profile.yml  prod.profile.yml  sagemaker.profile.yml  test.profile.yml
marsfill/utils/: __init__.py  profiler.py
notebooks/: sagemaker-train.ipynb
tests/: conftest.py  test_combined_loss.py  test_dataset_builder_worker.py  test_dtm_filler.py  test_end_to_end_stubbed.py  test_evaluator.py  test_filler_stats.py  test_hirise_indexer.py  test_hole_gen.py  test_profiler.py  test_streaming_dataset.py  test_train_dataloader.py  test_utils.py
tests/integration/: test_cli_dataset_integration.py  test_cli_fill_integration.py  test_cli_train_integration.py
